Fix wrong margins in block editor

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -51,9 +51,11 @@
 // Selectors with extra specificity to override some editor styles.
 .woocommerce-search-list__list.woocommerce-search-list__list {
 	margin: 0;
+	padding: 0;
 }
 
 .woocommerce-search-list__selected.woocommerce-search-list__selected > ul {
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
